DNA #494: Fix for wrapping long URLs in Webkit
BE AWARE: This breaks the previous wrapping label alignment fix
(a86973d5c) which has already been merged to dev!

Committing this here for the benefit of the UX team so we all have
access to my previous work in hope that it helps us squash this bug
for good. The key to this fix is adding display:table to the the <dd>,
but this in turn kills our nicely aligned labels, which were acheived
using a slight twist (clearing only left floats) to the now standard
clearfix approach.

The CSS is full of comments as well as commented out rules. You can
also read more about the wrapping long strings of text here:

* http://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container

* http://blog.kenneth.io/blog/2012/03/04/word-wrapping-hypernation-using-css

--- a/app/assets/stylesheets/cornell/_item-record.css.scss
+++ b/app/assets/stylesheets/cornell/_item-record.css.scss
@@ -55,10 +55,28 @@ dl.dl-horizontal {
 		overflow: visible;
 		text-overflow: inherit;
 		white-space: normal;
-		}
+	}
 	dd {
 		margin-left: 130px;
 		font-size: .875em;
+		display: table;
+		// The long URL wrapping saga
+		// -- more juicy details here:
+		//    http://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container
+		//    http://blog.kenneth.io/blog/2012/03/04/word-wrapping-hypernation-using-css
+		-ms-word-break: break-all;
+		// This causes Mozilla to break mid-word and then we would need hyphens
+		// -- we can cover this in CSS, but Mozilla is good without this so why
+		// -- introduce hyphens if we don't need them?
+		// word-break: break-all;
+
+		// Non standard for webkit
+		word-break: break-word;
+
+		// These don't seem to make a difference for Webkit/Mozilla
+		// -- keeping them around in case they prove useful for IE
+		// overflow-wrap: break-word;
+		// word-wrap: break-word;
 		ul {
 			list-style: none;
 			margin: 0;
